Parte 06 - Criado o metodo para upload de contatos via arquivo XML.

--- a/trab4bim/src/main/webapp/sistema/cadastrarPessoa.xhtml
+++ b/trab4bim/src/main/webapp/sistema/cadastrarPessoa.xhtml
@@ -73,13 +73,30 @@
  
 	 		 		</h:form>
  
-	 			 </p:tab>		 		
+	 			 </p:tab>	
+	 			 
+	 			 <p:tab title="Upload Xml Pessoa">
+ 
+  					 <h:form id="form-upload" enctype="multipart/form-data">
+ 
+     					 <h:panelGrid id="panelGrid-upload-xml" columns="2" cellpadding="10">
+ 
+							<p:fileUpload value="#{cadastrarPessoaController.file}" 
+		      					          mode="simple" 
+		      							  skinSimple="true" 
+		      							  label="Selecionar"/>
+ 
+							<p:commandButton value="Importar..." 
+			 	 							 ajax="false"
+			 	 							 actionListener="#{cadastrarPessoaController.UploadRegistros}"/>
+ 
+     					 </h:panelGrid>
+ 
+   					</h:form>	 			 			
+   						
+				</p:tab>	 		
  
 	 		</p:tabView>
- 
- 
- 
- 
  
 	</ui:define>
  
