Parte 07 - Criado metodo para consulta de pessoas e view

--- a/trab4bim/src/main/webapp/sistema/cadastrarPessoa.xhtml
+++ b/trab4bim/src/main/webapp/sistema/cadastrarPessoa.xhtml
@@ -61,7 +61,7 @@
 	            		<p:commandButton value="Salvar" 
 	            				 id="commandButton-salvar"
 						 icon="ui-icon-gear"
-						 actionListener="#{cadastrarPessoaController.SalvarNovaPessoa}"
+						 actionListener="#{cadastrarPessoaController.salvarNovaPessoa}"
 						 update="panelGrid-campos-form"/>
  
  
@@ -88,7 +88,7 @@
  
 							<p:commandButton value="Importar..." 
 			 	 							 ajax="false"
-			 	 							 actionListener="#{cadastrarPessoaController.UploadRegistros}"/>
+			 	 							 actionListener="#{cadastrarPessoaController.uploadRegistros}"/>
  
      					 </h:panelGrid>
  
