--- a/trab4bim/src/main/webapp/sistema/consultarPessoa.xhtml
+++ b/trab4bim/src/main/webapp/sistema/consultarPessoa.xhtml
@@ -5,7 +5,8 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:format="http://semicheche.br/LocalDateTimeConverter	">
  
 <h:head>
 </h:head>
@@ -39,7 +40,7 @@
  
         				 <p:column headerText="Cadastro">
             				<h:outputText value="#{pessoa.dataCadastro}">            					
- 
+ 								<format:LocalDateTimeConverter pattern="dd/MM/yyyy HH:mm:ss" />
             				</h:outputText>
         				 </p:column>
  
