Parte 10 - Criado metodo para excluir uma Pessoa.

--- a/trab4bim/src/main/webapp/sistema/consultarPessoa.xhtml
+++ b/trab4bim/src/main/webapp/sistema/consultarPessoa.xhtml
@@ -85,6 +85,13 @@
         				 </p:column>
  
         				 <p:column headerText="" style="width:25px;">
+        				 
+        				 	<p:commandButton icon="ui-icon-trash" 
+        				    		     title="Excluir Registro"                        					 
+                        					 ajax="true"
+                        					 actionListener="#{consultarPessoaController.excluirPessoa(pessoa)}"
+                        					 update="@form" />
+ 
  
         				 </p:column>
  
